api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-api-deployment
  namespace: converter-namespace
spec:
  replicas: 1
  selector:
    # а почему тут matchLabels?
    matchLabels:
      components: backend
  # шаблон, по которому будут разворачиваться реплики?
  template:
    metadata:
      labels:
        components: backend
    spec:
      containers:
        - name: converter-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - name: converter-api-data
              mountPath: /opt/app/uploads
      volumes:
        - name: converter-api-data
          persistentVolumeClaim:
            claimName: converter-api-pvc
