app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: converter-clusterip
  namespace: converter-namespace
spec:
  type: ClusterIP
  selector:
    components: frontend
  ports:
    - port: 80
      protocol: TCP
