node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: converter-port
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 30
      nodePort: 31200
  selector:
    components: frontend
