rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: ClusterIP
  selector:
    components: rabbitmq
  ports:
    - port: 5672
      protocol: TCP
