ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    # добавляется базовый путь к возвращаемым html
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: conv.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: converter-clusterip
                port:
                  number: 80
